zig/src/lua_api/lua.h

typedef struct lua_State lua_State;
/* type of numbers in Lua */
typedef LUA_NUMBER lua_Number;
/* type for integer functions */
typedef LUA_INTEGER lua_Integer;
/* type for continuation-function contexts */
typedef LUA_KCONTEXT lua_KContext;
/*
** Type for C functions registered with Lua
*/
typedef int (*lua_CFunction)(lua_State *L);
/*
** Type for continuation functions
*/
typedef int (*lua_KFunction)(lua_State *L, int status, lua_KContext ctx);
/*
** Type for memory-allocation functions
*/
typedef void *(*lua_Alloc)(void *ud, void *ptr, size_t osize, size_t nsize);
/*
** Type for warning functions
*/
typedef void (*lua_WarnFunction)(void *ud, const char *msg, int tocont);
/*
** Type used by the debug API to collect debug information
*/
typedef struct lua_Debug lua_Debug;
/*
** Functions to be called by the debugger in specific events
*/
typedef void (*lua_Hook)(lua_State *L, lua_Debug *ar);
LUA_API void(lua_close)(lua_State *L);
LUA_API lua_CFunction(lua_atpanic)(lua_State *L, lua_CFunction panicf);
LUA_API lua_Number(lua_version)(lua_State *L);
LUA_API void(lua_settop)(lua_State *L, int idx);
LUA_API void(lua_pushvalue)(lua_State *L, int idx);
LUA_API void(lua_rotate)(lua_State *L, int idx, int n);
LUA_API void(lua_copy)(lua_State *L, int fromidx, int toidx);
LUA_API void(lua_xmove)(lua_State *from, lua_State *to, int n);
LUA_API lua_Number(lua_tonumberx)(lua_State *L, int idx, int *isnum);
LUA_API lua_Integer(lua_tointegerx)(lua_State *L, int idx, int *isnum);
LUA_API lua_CFunction(lua_tocfunction)(lua_State *L, int idx);
LUA_API void(lua_arith)(lua_State *L, int op);
/*
** push functions (C -> stack)
*/
LUA_API void(lua_pushnil)(lua_State *L);
LUA_API void(lua_pushnumber)(lua_State *L, lua_Number n);
LUA_API void(lua_pushinteger)(lua_State *L, lua_Integer n);
LUA_API void(lua_pushcclosure)(lua_State *L, lua_CFunction fn, int n);
LUA_API void(lua_pushboolean)(lua_State *L, int b);
LUA_API void(lua_pushlightuserdata)(lua_State *L, void *p);
LUA_API void(lua_createtable)(lua_State *L, int narr, int nrec);
/*
** set functions (stack -> Lua)
*/
LUA_API void(lua_setglobal)(lua_State *L, const char *name);
LUA_API void(lua_settable)(lua_State *L, int idx);
LUA_API void(lua_setfield)(lua_State *L, int idx, const char *k);
LUA_API void(lua_seti)(lua_State *L, int idx, lua_Integer n);
LUA_API void(lua_rawset)(lua_State *L, int idx);
LUA_API void(lua_rawseti)(lua_State *L, int idx, lua_Integer n);
LUA_API void(lua_rawsetp)(lua_State *L, int idx, const void *p);
/*
** 'load' and 'call' functions (load and run Lua code)
*/
LUA_API void(lua_callk)(lua_State *L, int nargs, int nresults, lua_KContext ctx,
                        lua_KFunction k);
LUA_API int(lua_resume)(lua_State *L, lua_State *from, int narg, int *nres);
LUA_API int(lua_status)(lua_State *L);
LUA_API int(lua_isyieldable)(lua_State *L);
/*
** Warning-related functions
*/
LUA_API void(lua_setwarnf)(lua_State *L, lua_WarnFunction f, void *ud);
LUA_API void(lua_warning)(lua_State *L, const char *msg, int tocont);
LUA_API int(lua_gc)(lua_State *L, int what, ...);
/*
** miscellaneous functions
*/

LUA_API int(lua_error)(lua_State *L);
LUA_API int(lua_next)(lua_State *L, int idx);
LUA_API void(lua_concat)(lua_State *L, int n);
LUA_API void(lua_len)(lua_State *L, int idx);
LUA_API size_t(lua_stringtonumber)(lua_State *L, const char *s);
LUA_API lua_Alloc(lua_getallocf)(lua_State *L, void **ud);
LUA_API void(lua_setallocf)(lua_State *L, lua_Alloc f, void *ud);
LUA_API void(lua_toclose)(lua_State *L, int idx);
LUA_API void(lua_closeslot)(lua_State *L, int idx);
LUA_API int(lua_getstack)(lua_State *L, int level, lua_Debug *ar);
LUA_API int(lua_getinfo)(lua_State *L, const char *what, lua_Debug *ar);
LUA_API const char *(lua_getlocal)(lua_State * L, const lua_Debug *ar, int n);
LUA_API const char *(lua_setlocal)(lua_State * L, const lua_Debug *ar, int n);
LUA_API const char *(lua_getupvalue)(lua_State * L, int funcindex, int n);
LUA_API const char *(lua_setupvalue)(lua_State * L, int funcindex, int n);
LUA_API void *(lua_upvalueid)(lua_State * L, int fidx, int n);
LUA_API void(lua_upvaluejoin)(lua_State *L, int fidx1, int n1, int fidx2,
                              int n2);
LUA_API void(lua_sethook)(lua_State *L, lua_Hook func, int mask, int count);
LUA_API lua_Hook(lua_gethook)(lua_State *L);
LUA_API int(lua_gethookmask)(lua_State *L);
LUA_API int(lua_gethookcount)(lua_State *L);
LUA_API int(lua_setcstacklimit)(lua_State *L, unsigned int limit);
struct lua_Debug {
  int event;
  const char *name;           /* (n) */
  const char *namewhat;       /* (n) 'global', 'local', 'field', 'method' */
  const char *what;           /* (S) 'Lua', 'C', 'main', 'tail' */
  const char *source;         /* (S) */
  size_t srclen;              /* (S) */
  int currentline;            /* (l) */
  int linedefined;            /* (S) */
  int lastlinedefined;        /* (S) */
  unsigned char nups;         /* (u) number of upvalues */
  unsigned char nparams;      /* (u) number of parameters */
  char isvararg;              /* (u) */
  char istailcall;            /* (t) */
  unsigned short ftransfer;   /* (r) index of first value transferred */
  unsigned short ntransfer;   /* (r) number of transferred values */
  char short_src[LUA_IDSIZE]; /* (S) */
  /* private part */
  struct CallInfo *i_ci; /* active function */
};