zig/src/lua_api/lauxlib.h

typedef struct luaL_Buffer luaL_Buffer;
typedef struct luaL_Reg {
  const char *name;
  lua_CFunction func;
} luaL_Reg;
LUALIB_API void(luaL_checkversion_)(lua_State *L, lua_Number ver, size_t sz);
LUALIB_API int(luaL_getmetafield)(lua_State *L, int obj, const char *e);
LUALIB_API int(luaL_callmeta)(lua_State *L, int obj, const char *e);
LUALIB_API const char *(luaL_tolstring)(lua_State * L, int idx, size_t *len);
LUALIB_API int(luaL_argerror)(lua_State *L, int arg, const char *extramsg);
LUALIB_API int(luaL_typeerror)(lua_State *L, int arg, const char *tname);
LUALIB_API const char *(luaL_checklstring)(lua_State * L, int arg, size_t *l);
LUALIB_API const char *(luaL_optlstring)(lua_State * L, int arg,
                                         const char *def, size_t *l);
LUALIB_API lua_Number(luaL_checknumber)(lua_State *L, int arg);
LUALIB_API lua_Number(luaL_optnumber)(lua_State *L, int arg, lua_Number def);
LUALIB_API lua_Integer(luaL_checkinteger)(lua_State *L, int arg);
LUALIB_API lua_Integer(luaL_optinteger)(lua_State *L, int arg, lua_Integer def);
LUALIB_API void(luaL_checkstack)(lua_State *L, int sz, const char *msg);
LUALIB_API void(luaL_checktype)(lua_State *L, int arg, int t);
LUALIB_API void(luaL_checkany)(lua_State *L, int arg);
LUALIB_API int(luaL_newmetatable)(lua_State *L, const char *tname);
LUALIB_API void(luaL_setmetatable)(lua_State *L, const char *tname);
LUALIB_API void *(luaL_testudata)(lua_State * L, int ud, const char *tname);
LUALIB_API void *(luaL_checkudata)(lua_State * L, int ud, const char *tname);
LUALIB_API void(luaL_where)(lua_State *L, int lvl);
LUALIB_API int(luaL_error)(lua_State *L, const char *fmt, ...);
LUALIB_API int(luaL_checkoption)(lua_State *L, int arg, const char *def,
                                 const char *const lst[]);
LUALIB_API int(luaL_fileresult)(lua_State *L, int stat, const char *fname);
LUALIB_API int(luaL_execresult)(lua_State *L, int stat);
LUALIB_API int(luaL_ref)(lua_State *L, int t);
LUALIB_API void(luaL_unref)(lua_State *L, int t, int ref);
LUALIB_API int(luaL_loadfilex)(lua_State *L, const char *filename,
                               const char *mode);
LUALIB_API int(luaL_loadbufferx)(lua_State *L, const char *buff, size_t sz,
                                 const char *name, const char *mode);
LUALIB_API int(luaL_loadstring)(lua_State *L, const char *s);
LUALIB_API lua_State *(luaL_newstate)(void);
LUALIB_API lua_Integer(luaL_len)(lua_State *L, int idx);
LUALIB_API void(luaL_addgsub)(luaL_Buffer *b, const char *s, const char *p,
                              const char *r);
LUALIB_API const char *(luaL_gsub)(lua_State * L, const char *s, const char *p,
                                   const char *r);
LUALIB_API void(luaL_setfuncs)(lua_State *L, const luaL_Reg *l, int nup);
LUALIB_API int(luaL_getsubtable)(lua_State *L, int idx, const char *fname);
LUALIB_API void(luaL_traceback)(lua_State *L, lua_State *L1, const char *msg,
                                int level);
LUALIB_API void(luaL_requiref)(lua_State *L, const char *modname,
                               lua_CFunction openf, int glb);
/*
** {======================================================
** Generic Buffer manipulation
** =======================================================
*/

struct luaL_Buffer {
  char *b;     /* buffer address */
  size_t size; /* buffer size */
  size_t n;    /* number of characters in buffer */
  lua_State *L;
  union {
    LUAI_MAXALIGN;           /* ensure maximum alignment for buffer */
    char b[LUAL_BUFFERSIZE]; /* initial buffer */
  } init;
};
LUALIB_API void(luaL_buffinit)(lua_State *L, luaL_Buffer *B);
LUALIB_API char *(luaL_prepbuffsize)(luaL_Buffer * B, size_t sz);
LUALIB_API void(luaL_addlstring)(luaL_Buffer *B, const char *s, size_t l);
LUALIB_API void(luaL_addstring)(luaL_Buffer *B, const char *s);
LUALIB_API void(luaL_addvalue)(luaL_Buffer *B);
LUALIB_API void(luaL_pushresult)(luaL_Buffer *B);
LUALIB_API void(luaL_pushresultsize)(luaL_Buffer *B, size_t sz);
LUALIB_API char *(luaL_buffinitsize)(lua_State * L, luaL_Buffer *B, size_t sz);
typedef struct luaL_Stream {
  FILE *f;              /* stream (NULL for incompletely created streams) */
  lua_CFunction closef; /* to close stream (NULL for closed streams) */
} luaL_Stream;